<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.detail.DetailFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/container_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_detail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150mdp"
                android:layout_marginTop="@dimen/_8mdp"
                android:layout_marginStart="@dimen/_16mdp"
                android:layout_marginEnd="@dimen/_16mdp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2mdp"
                android:layout_marginStart="@dimen/_16mdp"
                android:layout_marginEnd="@dimen/_16mdp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/title_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8mdp"
                    android:ellipsize="end"
                    android:layout_weight="1"
                    android:hint="@string/title3"
                    android:maxLines="1"
                    android:textSize="@dimen/_14mdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/date_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="end"
                    android:layout_weight="1"
                    android:hint="@string/date3"
                    android:maxLines="1"
                    android:textSize="@dimen/_14mdp"
                    android:textStyle="bold" />
            </LinearLayout>
            <TextView
                android:id="@+id/body_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10mdp"
                android:layout_marginStart="@dimen/_16mdp"
                android:layout_marginEnd="@dimen/_16mdp"
                android:ellipsize="end"
                android:maxLines="4"
                android:hint="@string/body"
                android:textSize="@dimen/_16mdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/author_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8mdp"
                android:layout_marginStart="@dimen/_16mdp"
                android:layout_marginEnd="@dimen/_16mdp"
                android:ellipsize="end"
                android:hint="@string/author"
                android:maxLines="1"
                android:textSize="@dimen/_14mdp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/comment_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16mdp"
                android:layout_marginTop="@dimen/_10mdp"
                android:layout_marginEnd="@dimen/_16mdp"
                android:text="@string/comments"
                android:textSize="@dimen/_14mdp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16mdp"
                android:layout_marginEnd="@dimen/_16mdp"
                tools:listitem="@layout/item_comment_detail"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progress_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>